[metadata]
name = tpDcc-core
description = Core module for tpDcc. Includes core modules to use DCC Python APIs in a DCC agnostic way
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
license_file = LICENSE
author = Tomas Poveda
author_email = tpovedatd@gmail.com
url = https://github.com/tpDcc/tpDcc-core

[options]
zip_safe = False
include_package_data = true
packages=find:
install_requires =
    Qt.py==1.3.3
    metayaml==0.26
    tpDcc-config
    tpDcc-libs-python

[options.extras_require]
dev = wheel
test = pytest
standalone=tpDcc-dccs-standalone
maya=tpDcc-dccs-maya
max=tpDcc-dccs-max
houdini=tpDcc-dccs-houdini
mobu=tpDcc-dccs-mobu
nuke=tpDcc-dccs-nuke
unreal=tpDcc-dccs-unreal

[bdist_wheel]
universal=1

[versioneer]
VCS = git
style = pep440
versionfile_source = tpDcc/_version.py
versionfile_build =
tag_prefix =
parentdir_prefix =